// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<li
  className="cf-15spu1u"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-32iz07"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active 1`] = `
<li
  className="cf-1wi2cf1"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active dot 1`] = `
<li
  className="cf-fguc2k"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active next 1`] = `
<li
  className="cf-1ezx84k"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active prev 1`] = `
<li
  className="cf-1ezx84k"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled 1`] = `
<li
  className="cf-yr93k7"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled dot 1`] = `
<li
  className="cf-xa3msm"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled next 1`] = `
<li
  className="cf-mgj6am"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled prev 1`] = `
<li
  className="cf-mgj6am"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-109b087"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;
